fix inline form control group label wrapping

--- a/dev/scss/_form-controls.scss
+++ b/dev/scss/_form-controls.scss
@@ -378,9 +378,13 @@
 			margin: 15px 0 0;
 		}
 
-	.fcontrol__text-label-inline {
-		width: 3em;
-		text-align: right;
+	@include bp(screen1) {
+
+		.fcontrol__text-label-inline {
+			width: 3em;
+			text-align: right;
+		}
+
 	}
 
 	@include bp(screen2) {
